--- a/notion.html
+++ b/notion.html
@@ -1,5 +1,9 @@
-<html> 
-<script>
-<iframe title="MVP1_Disparos" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiOTk3NjZiODQtNDQwNy00YzVhLThlZmItZmI3YWFlMWQxNjY1IiwidCI6ImQxOGNkODg4LThjZjMtNDkyZS05MGZjLTFhMjRlNDJkMmQwMSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
-</script> 
+
+<html>
+	<head>
+		<title>Mi página de ejemplo</title>
+	</head>
+	<body>
+    <iframe title="MVP1_Disparos" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiOTk3NjZiODQtNDQwNy00YzVhLThlZmItZmI3YWFlMWQxNjY1IiwidCI6ImQxOGNkODg4LThjZjMtNDkyZS05MGZjLTFhMjRlNDJkMmQwMSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+	</body>
 </html>
