--- a/REstudio.html
+++ b/REstudio.html
@@ -1,1 +1,8 @@
-
+<html>
+	<head>
+		<title>Mi página de ejemplo</title>
+	</head>
+	<body>
+<iframe title="MVP1_Disparos" width="600" height="486" src="https://app.powerbi.com/view?r=eyJrIjoiOTk3NjZiODQtNDQwNy00YzVhLThlZmItZmI3YWFlMWQxNjY1IiwidCI6ImQxOGNkODg4LThjZjMtNDkyZS05MGZjLTFhMjRlNDJkMmQwMSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+	</body>
+</html>
